DevOCL/src/objects/CLQ_OCLQS_Configuration__c.object
<CustomObject>
    <description>This object will be used to set configuration needs for OCLQS per type of program.</description>
    <fields>
        <fullName>CLQ_Admin_Queue_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin Queue Assignment</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OCLQS_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Change_of_Location_Fee__c</fullName>
        <label>Change of Location Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for OCLQS Configuration object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_JFS_County_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JFS County Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OCLQS_Configurations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_New_Application_Fee__c</fullName>
        <label>New Application Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CLQ_ODE_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ODE Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OCLQS_Configurations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Renewal_Fee__c</fullName>
        <label>Renewal Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>OCLQS Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CLQ_New_Application_Fee__c</columns>
        <columns>CLQ_Change_of_Location_Fee__c</columns>
        <columns>CLQ_Renewal_Fee__c</columns>
        <columns>CLQ_Admin_Queue_Assignment__c</columns>
        <columns>CLQ_JFS_County_Supervisor__c</columns>
        <columns>CLQ_ODE_Supervisor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OCLQS Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OCLQS Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>